applied